--- a/pro-Home.html
+++ b/pro-Home.html
@@ -367,7 +367,7 @@
                                 <br>
                                 This website is basically one of my 
                                 Web Development project which is 
-                                built using HTML only.
+                                built using HTML and CSS only.
                                 Here one can also find ideas for 
                                 projects in different languages.
                                 Thanks again for reading this, 
@@ -398,7 +398,7 @@
                     <tr>
                         <br>
                         <td width="13%" valign="top">
-                            <a href="https://www.linkedin.com/in/purushottam-anand-3a737b1a5/" target="_blank" style="text-decoration:none">
+                            <a href="https://www.linkedin.com/in/puruanand/" target="_blank" style="text-decoration:none">
                                 LinkedIn  ➲
                             </a>
                         </td>
@@ -438,7 +438,7 @@
                             |
                         </td>
                         <td width="13%" valign="top">
-                            <a href="https://www.instagram.com/puru_n_22/" target="_blank" style="text-decoration:none">
+                            <a href="https://www.instagram.com/puru_n.exe/" target="_blank" style="text-decoration:none">
                                 Instagram  ➲
                             </a>
                         </td>
